overflow fix attempt 4

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: black;
-  overflow-x: hidden !important;
+  overflow: hidden !important;
   position: relative;
 }
 
@@ -213,8 +213,6 @@ hr {
   height: 100%;
   width: 100%;
   position: relative;
-  overflow-y: hidden;
-
 }
 
 .email.button {
